@startuml

title __DAO's Class Diagram__\n

  package com.infosupport.poc.ddd.dao {
    class PaymentInstructionFactory {
        + createPaymentInstructionEntity()
        + createPaymentInstruction()
    }
  }
  

  package com.infosupport.poc.ddd.dao {
    class PaymentInstructionRepositoryImpl {
        - entityManager : EntityManager
        + add()
        + find()
        - findOrderingAccount()
    }
  }
  

  PaymentInstructionRepositoryImpl -up-|> PaymentInstructionRepository
  PaymentInstructionRepositoryImpl o-- PaymentInstructionFactory : paymentInstructionFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
